# readai-rag

./: .env  .gitignore  README.md  pyproject.toml  run.sh  run_qdrant.sh
learn_notes/: ElasticsearchIndexDemo.ipynb  Embeddings_Reranker_Evaluation.ipynb  MetadataExtractionSEC.ipynb  MetadataReplacementDemo.ipynb  QdrantIndexDemo.ipynb  Qdrant_metadata_filter.ipynb  advanced_rag_small_to_big.ipynb  auto_merging_retriever.ipynb  chat_engine_context.ipynb  custom_embeddings.ipynb  fusion_retriever.ipynb  local_embeddings.ipynb  pinecone_auto_retriever.ipynb  prompts_rag.ipynb  qdrant_hybrid.ipynb  rag_llamaindex_librarian.ipynb
readai/: __init__.py  main.py
readai/api/: main_router.py  router.py
readai/api/endpoints/: chat.py  document.py
readai/api/routers/: chat.py  document.py
readai/components/: embedding.py  epub2md_loader.py  extractors.py  hierarchical.py  llm.py  loaders.py  node_parsers.py  prompts.py  rerank_retriever.py  retrievers.py  summarization.py  test.md
readai/components/custom/text_splitters/: chinese_text_splitter.py  hierarchical.py  sentence.py
readai/components/text_splitters/: chinese_text_splitter.py  zh_hance.py
readai/core/: config.py  exceptions.py  models.py  schema.py
readai/core/pipeline/: ingestion.py  quering.py
readai/core/reading/: doc_loaders.py  extractprs.py  prompts.py  splitters.py
readai/db/: models.py  session.py
readai/services/: document_loader.py  embedding.py  llm.py  rag_engine.py  vector_store.py
readai/tests/data/: .gitignore  comunication_cleaned.md
readai/tests/llm-chat/: api_req.html  test_deepseek.py  test_llmaindex.ipynb  test_ollama.py  test_sse.py
readai/tests/rag-flow/: auto_merge_test.ipynb  contextual_retriever.py  document.ipynb  documents_data.json  epub_loader.py  hybrid_retriever.ipynb  load_document.ipynb  markdown_ingestion.ipynb  node_content_paged.txt  node_content_single.txt  nodes_data.json  persis_data.ipynb  qa_dataset.csv  rerank_hybrid.ipynb  rerank_win.ipynb  test_contextual_retriever.py  test_mlflow.py  test_preprocess.ipynb  test_qa_datasets.json  test_query.ipynb  test_query.py  test_rag.py  test_spliiter.py
scripts/: init_db.py  test_rag.py
